JS/JSON Objects task from Scrum.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JS</title>
 
     <script src="./index.js"></script>
+    <script src="./jsonTask.js"></script>
 </head>
 <body>
     <h1>javascript is cool</h1>
