--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
 
-    <script src="./index.js"></script>
-    <script src="./jsonTask.js"></script>
+    <script src="./jsPromises.js"></script>
 </head>
 <body>
     <h1>javascript is cool</h1>
