Revised version of JS Classes task from Scrum.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
 
-    <script src="./jsPrototypesAndClasses.js"></script>
+    <script src="./modules/Character.js"></script>
+    <script src="./modules/PlayerCharacter.js"></script>
+    <script src="./modules/NonPlayerCharacter.js"></script>
+    <script src="./modules/Field.js"></script>
+    <script src="./play.js"></script>
 </head>
 <body>
     <h1>javascript is cool</h1>
